[gd_scene load_steps=25 format=3 uid="uid://r1i7cj56hh7f"]

[ext_resource type="Script" path="res://Escenas/nivelAle/puzzle_dioses.gd" id="1_cq1lr"]
[ext_resource type="Texture2D" uid="uid://c38kyyfnmscve" path="res://Assets/Egyptian_D.png" id="1_wyigg"]
[ext_resource type="Texture2D" uid="uid://bfc5yngl422by" path="res://Assets/sunra.png" id="2_e5aoq"]
[ext_resource type="Script" path="res://Escenas/nivelAle/Ra.gd" id="3_b1sfm"]
[ext_resource type="Texture2D" uid="uid://7txtjk0nsbsd" path="res://Assets/osiris.png" id="4_dops2"]
[ext_resource type="Texture2D" uid="uid://dqhgywenf7gxn" path="res://Assets/horus.png" id="5_7h0ua"]
[ext_resource type="Script" path="res://Escenas/nivelAle/Osiris.gd" id="5_fxtlt"]
[ext_resource type="Texture2D" uid="uid://ds3k4qthdft0e" path="res://Assets/Egyptian_C.png" id="6_ywkn0"]
[ext_resource type="Script" path="res://Escenas/nivelAle/Horus.gd" id="7_dbkt2"]
[ext_resource type="Texture2D" uid="uid://baq33cka45v76" path="res://Assets/Egyptian_A2.png" id="9_f6otn"]
[ext_resource type="Script" path="res://Escenas/nivelAle/TextEdit.gd" id="11_n0y1r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2mvxk"]
atlas = ExtResource("1_wyigg")
region = Rect2(256.274, 256.079, 94.5697, 63.9038)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4de6"]
atlas = ExtResource("1_wyigg")
region = Rect2(31.7258, 372.014, 31.4624, 33.3045)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ugwo2"]
size = Vector2(65, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnsn4"]
atlas = ExtResource("6_ywkn0")
region = Rect2(265, 483, 14, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n18c"]
atlas = ExtResource("2_e5aoq")
region = Rect2(267.235, 67.8442, 221.24, 133.99)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kb2pm"]
size = Vector2(38, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_j41wc"]
atlas = ExtResource("4_dops2")
region = Rect2(396.058, 418.839, 225.967, 207.136)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gujp"]
size = Vector2(33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2l1y"]
atlas = ExtResource("5_7h0ua")
region = Rect2(-8.09131, -4.36761, 268.091, 284.368)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tfx03"]
size = Vector2(37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_abgdx"]
atlas = ExtResource("9_f6otn")
region = Rect2(284.364, 285.091, 39.0909, 40.9091)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp8ja"]
atlas = ExtResource("9_f6otn")
region = Rect2(265.498, 297.634, 13.2293, 12.3374)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1pw8"]
atlas = ExtResource("6_ywkn0")
region = Rect2(361.025, 288.107, 15.2157, 33.1145)

[node name="PuzzleDioses" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cq1lr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_2mvxk")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 116.0
offset_top = 235.0
offset_right = 266.0
offset_bottom = 395.0
texture = SubResource("AtlasTexture_y4de6")

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 378.0
offset_top = 234.0
offset_right = 528.0
offset_bottom = 394.0
texture = SubResource("AtlasTexture_y4de6")

[node name="TextureRect4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 639.0
offset_top = 235.0
offset_right = 789.0
offset_bottom = 395.0
texture = SubResource("AtlasTexture_y4de6")

[node name="TextureRect5" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 895.0
offset_top = 234.0
offset_right = 1045.0
offset_bottom = 394.0
texture = SubResource("AtlasTexture_y4de6")

[node name="raArea" type="Area2D" parent="."]
position = Vector2(194, 296)

[node name="CollisionShape2D" type="CollisionShape2D" parent="raArea"]
position = Vector2(-1.5, 5.5)
shape = SubResource("RectangleShape2D_ugwo2")

[node name="osirisArea" type="Area2D" parent="."]
position = Vector2(450, 296)

[node name="CollisionShape2D" type="CollisionShape2D" parent="osirisArea"]
position = Vector2(2, 1)
shape = SubResource("RectangleShape2D_ugwo2")

[node name="horusArea" type="Area2D" parent="."]
position = Vector2(714, 296)

[node name="CollisionShape2D" type="CollisionShape2D" parent="horusArea"]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_ugwo2")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.356863)
position = Vector2(970, 300)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_tnsn4")

[node name="Ra" type="CharacterBody2D" parent="."]
z_index = 3
position = Vector2(942, 106)
script = ExtResource("3_b1sfm")

[node name="Ra" type="Sprite2D" parent="Ra"]
position = Vector2(8, -2.99999)
scale = Vector2(0.7, 0.749)
texture = SubResource("AtlasTexture_8n18c")

[node name="Button" type="Button" parent="Ra/Ra"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.5
offset_top = -66.5
offset_right = -110.5
offset_bottom = -66.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ra"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_kb2pm")

[node name="Osiris" type="CharacterBody2D" parent="."]
z_index = 3
position = Vector2(174, 122)
script = ExtResource("5_fxtlt")

[node name="osiris" type="Sprite2D" parent="Osiris"]
position = Vector2(-2.99997, -5.99998)
scale = Vector2(0.627195, 0.671422)
texture = SubResource("AtlasTexture_j41wc")

[node name="Button" type="Button" parent="Osiris/osiris"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.5
offset_top = -66.5
offset_right = -110.5
offset_bottom = -66.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Osiris"]
position = Vector2(-3, -1)
shape = SubResource("RectangleShape2D_8gujp")

[node name="Horus" type="CharacterBody2D" parent="."]
z_index = 3
position = Vector2(776, 524)
script = ExtResource("7_dbkt2")

[node name="horus" type="Sprite2D" parent="Horus"]
position = Vector2(3, -2)
scale = Vector2(0.5, 0.535)
texture = SubResource("AtlasTexture_u2l1y")

[node name="Button" type="Button" parent="Horus/horus"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.5
offset_top = -66.5
offset_right = -110.5
offset_bottom = -66.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Horus"]
shape = SubResource("RectangleShape2D_tfx03")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(318, 315)
texture = SubResource("AtlasTexture_abgdx")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(582, 308)
scale = Vector2(6.35294, 1.49947)
texture = SubResource("AtlasTexture_gp8ja")

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(846, 335)
scale = Vector2(6.35294, 1.49947)
texture = SubResource("AtlasTexture_gp8ja")

[node name="Sprite2D5" type="Sprite2D" parent="."]
position = Vector2(843, 280)
scale = Vector2(6.35294, 1.49947)
texture = SubResource("AtlasTexture_gp8ja")

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.786
anchor_top = 0.369
anchor_right = 0.898
anchor_bottom = 0.537
offset_left = 37.528
offset_top = 1.88799
offset_right = -40.4961
offset_bottom = 2.02399
theme_override_font_sizes/font_size = 70
minimap_width = 0
caret_blink_interval = 0.6
script = ExtResource("11_n0y1r")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 546.0
offset_top = 487.0
offset_right = 569.0
offset_bottom = 528.0
scale = Vector2(3.77338, 2.76855)
mouse_default_cursor_shape = 2
icon = SubResource("AtlasTexture_y1pw8")
flat = true

[connection signal="correct_position_set" from="." to="Ra" method="_on_puzzle_dioses_correct_position_set"]
[connection signal="correct_position_set" from="." to="Osiris" method="_on_puzzle_dioses_correct_position_set"]
[connection signal="correct_position_set" from="." to="Horus" method="_on_puzzle_dioses_correct_position_set"]
[connection signal="body_entered" from="raArea" to="." method="_on_ra_area_body_entered"]
[connection signal="body_exited" from="raArea" to="." method="_on_ra_area_body_exited"]
[connection signal="body_entered" from="osirisArea" to="." method="_on_osiris_area_body_entered"]
[connection signal="body_exited" from="osirisArea" to="." method="_on_osiris_area_body_exited"]
[connection signal="body_entered" from="horusArea" to="." method="_on_horus_area_body_entered"]
[connection signal="body_exited" from="horusArea" to="." method="_on_horus_area_body_exited"]
[connection signal="button_down" from="Ra/Ra/Button" to="Ra" method="_on_button_button_down"]
[connection signal="button_up" from="Ra/Ra/Button" to="Ra" method="_on_button_button_up"]
[connection signal="button_down" from="Osiris/osiris/Button" to="Osiris" method="_on_button_button_down"]
[connection signal="button_up" from="Osiris/osiris/Button" to="Osiris" method="_on_button_button_up"]
[connection signal="button_down" from="Horus/horus/Button" to="Horus" method="_on_button_button_down"]
[connection signal="button_up" from="Horus/horus/Button" to="Horus" method="_on_button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
